Previous version had bibliography, but intro version without citations! - swapped for intro version *with* citations, everything else (including intro content) same

--- a/AEDA Final.Rmd
+++ b/AEDA Final.Rmd
@@ -17,13 +17,13 @@ require(nlme)
 ```
 
 #### Introduction
-Animal pollination is a vital but imperiled ecosystem service required by most plant species in both natural and agricultural systems (. Considering the role pollinators play in supporting reproduction of plants, maintaining robust plant-pollinator networks is both economically valuable and a key goal for conservation of terrestrial biodiversity. Recent evidence pointing toward widespread disruption of plant-pollinator networks as a result of anthropogenic activities, as well declining populations of some prominent pollinators, has stimulated interest in restoring interactions between plants and pollinators, particularly bees
+Animal pollination is a vital but imperiled ecosystem service required by most plant species in both natural and agricultural systems (Ollerton et al. 2011). Considering the role pollinators play in supporting reproduction of plants, maintaining robust plant-pollinator networks is both economically valuable and a key goal for conservation of terrestrial biodiversity. Recent evidence pointing toward widespread disruption of plant-pollinator networks as a result of anthropogenic activities, as well declining populations of some prominent pollinators, has stimulated interest in restoring interactions between plants and pollinators, particularly bees (Menz et al. 2011).
 
-Current efforts targeting restoration of plant and bee communities have focused largely on increasing floral richness. Both theory and empirical evidence suggest positive correlation between plant and bee richness. Diverse plant communities provide floral resources over a longer period of time than less-diverse communities and are more likely to have multiple species flowering at a given point in time, buffering bee visitors against variation in abundance of any given plant species. Additionally, declines in floral richness have been implicated as a contributing factor in declining bumble bee populations. While restoration efforts aiming to increase floral richness have been widely implementated, relatively little evidence exists describing the success of such efforts in achieving this goal. Differences in survival of species introduced during restoration, as well as recruitment of preexisting species from seeds, could cause the richness and composition of restored areas to deviate from that of the initial restored community. Documenting not only the composition of post-restoration communities but how they compare to unrestored communities is also valuable for understanding whether plant communities introduced via restoration serve to either replace or augment existing communities and the impacts such changes might have on bee and other pollinator communities and network structure.
+Current efforts targeting restoration of plant and bee communities have focused largely on increasing floral richness (Ebeling et al. 2008, Menz et al. 2011). Both theory and empirical evidence suggest positive correlation between plant and bee richness (Ebeling et al. 2008). Diverse plant communities provide floral resources over a longer period of time than less-diverse communities and are more likely to have multiple species flowering at a given point in time, buffering bee visitors against variation in abundance of any given plant species. Additionally, declines in floral richness have been implicated as a contributing factor in declining bumble bee populations (Scheper et al. 2014). While restoration efforts aiming to increase floral richness have been widely implementated, relatively little evidence exists describing the success of such efforts in achieving this goal. Differences in survival of species introduced during restoration, as well as recruitment of preexisting species from seeds, could cause the richness and composition of restored areas to deviate from that of the initial restored community. Documenting not only the composition of post-restoration communities but how they compare to unrestored communities is also valuable for understanding whether plant communities introduced via restoration serve to either replace or augment existing communities and the impacts such changes might have on bee and other pollinator communities and network structure.
 
-Effects of restoration on bee communities are similarly difficult to predict. Restoration efforts frequently implement a "one-size-fits-all" approach that uses general management practices thought to support general bee diversity, but that do not target any particular group. Nevertheless, bee taxa are known to vary widely in their biotic and abiotic requirements, particularly with respect to floral resources and nesting substrates. Bees' floral preferences and diet breadths span a spectrum from broad generalization to extreme specialization in which a given bee species collects pollen from only a small number of related plant species. As such, standardized seed mixes used in habitat restoration may neglect the resource requirements of many species found in a regional bee community. Meanwhile, some plant families that support an inordinate diversity of specialist bees (e.g., Asteraceae) are common components of communities in even unrestored, disturbed, and degraded open habitats. If restored plant communities largely cater to generalist bees that may also be supported by plants flowering in unrestored sites, effects of restoration on bee richness may be relatively small. Management may also have differential impacts on bees utilizing different nesting locations. In open sites, ground-nesting bee species may be more likely to be nesting within the restored area itself than species nesting above ground in locations such as dead wood and stems and therefore may be more directly affected by changes in abiotic conditions due to restoration.
+Effects of restoration on bee communities are similarly difficult to predict. Restoration efforts frequently implement a "one-size-fits-all" approach that uses general management practices thought to support general bee diversity, but that do not target any particular group (Menz et al. 2011). Nevertheless, bee taxa are known to vary widely in their biotic and abiotic requirements, particularly with respect to floral resources and nesting substrates (Roulston and Goodell 2011). Bees' floral preferences and diet breadths span a spectrum from broad generalization to extreme specialization in which a given bee species collects pollen from only a small number of related plant species (Waser and Ollerton 2006, Fowler 2016). As such, standardized seed mixes used in habitat restoration may neglect the resource requirements of many species found in a regional bee community. Meanwhile, some plant families that support an inordinate diversity of specialist bees (e.g., Asteraceae) are common components of communities in even unrestored, disturbed, and degraded open habitats (Fowler 2016). If restored plant communities largely cater to generalist bees that may also be supported by plants flowering in unrestored sites, effects of restoration on bee richness may be relatively small. Management may also have differential impacts on bees utilizing different nesting locations. In open sites, ground-nesting bee species may be more likely to be nesting within the restored area itself than species nesting above ground in locations such as dead wood and stems and therefore may be more directly affected by changes in abiotic conditions due to restoration (Roulston and Goodell 2011).
 
-Beyond impacts on plant and bee communities alone, restoration is also likely to alter the structure of interaction networks. Restored plant communities may feature both species that occurred in the area prior to restoration as well as those added via restoration. The consequences of enhanced plant community richness for species occurring in both pre- and post-restoration communities are unclear. In particular, the number of different bee species visiting flowers of a given plant species could potentially increase or decrease as plant community richness increases, depending on effects of restoration on bee communities. If restoration increases bee community richness or the abundance of previously-uncommon bee species, individual plants may be more likely to receive visits from a larger variety of species in restored plots than unrestored plots. Alternatively, increasing plant species richness may drive competition for bees, causing some plants to receive fewer floral visitors than prior to restoration. This effect could be exacerbated if rich plant communities that are more likely to contain preferred floral resources also experience either greater resource partitioning among bee species or greater differences in visitation between preferred resources and other species.
+Beyond impacts on plant and bee communities alone, restoration is also likely to alter the structure of interaction networks (Menz et al. 2011, Feinsinger 1987). Restored plant communities may feature both species that occurred in the area prior to restoration as well as those added via restoration. The consequences of enhanced plant community richness for species occurring in both pre- and post-restoration communities are unclear. In particular, the number of different bee species visiting flowers of a given plant species could potentially increase or decrease as plant community richness increases, depending on effects of restoration on bee communities. If restoration increases bee community richness or the abundance of previously-uncommon bee species, individual plants may be more likely to receive visits from a larger variety of species in restored plots than unrestored plots (Albrecht et al. 2012). Alternatively, increasing plant species richness may drive competition for bees, causing some plants to receive fewer floral visitors than prior to restoration (Menz et al. 2011, Feinsinger 1987). This effect could be exacerbated if rich plant communities that are more likely to contain preferred floral resources also experience either greater resource partitioning among bee species or greater differences in visitation between preferred resources and other species.
 
 Using data collected in a paired study design over several years, I compared diversity of plant and bee communities and observations of species-specific plant-bee interactions at restored and unrestored field plots to ask 1) Does species richness of flowering plants and bees differ between restored and unrestored plots? 2) Do responses of bee species richness to restoration differ between groups that utilize different nesting substrates? And 3) does the number of bee species with which plant species interact differ between restored and unrestored areas?
 
@@ -390,11 +390,12 @@ Interaction diversity did not differ significantly between treatment types, desp
 #### Bibliography
 
 Albrecht, M., Schmid, B., Hautier, Y. & Müller, C. B. Diverse pollinator communities enhance plant reproductive success. Proceedings of the Royal Society B: Biological Sciences 279, 4845–4852 (2012).
-Colla, S. R. & Packer, L. Evidence for decline in eastern North American bumblebees (Hymenoptera: Apidae), with special focus on Bombus affinis Cresson. Biodivers Conserv 17, 1379 (2008).
 Ebeling, A., Klein, A.-M., Schumacher, J., Weisser, W. W. & Tscharntke, T. How does plant richness affect pollinator richness and temporal stability of flower visits? Oikos 117, 1808–1815 (2008).
 Feinsinger, P. Effects of plant species on each other’s pollination : is community structure influenced? Trends in Ecology and Evolution 2, 4 (1987).
+Fowler, J. Specialist Bees of the Northeast: Host Plants and Habitat Conservation. nena 23, 305–320 (2016).
 Menz, M. H. M. et al. Reconnecting plants and pollinators: challenges in the restoration of pollination mutualisms. Trends in Plant Science 16, 4–12 (2011).
 Ollerton, J., Winfree, R. & Tarrant, S. How many flowering plants are pollinated by animals? Oikos 120, 321–326 (2011).
-Fowler, J. Specialist Bees of the Northeast: Host Plants and Habitat Conservation. nena 23, 305–320 (2016).
-Williams, P. H. The Distribution and Decline of British Bumble Bees (Bombus Latr.). Journal of Apicultural Research 21, 236–245 (1982).
 Roulston, T. H. & Goodell, K. The Role of Resources and Risks in Regulating Wild Bee Populations. Annual Review of Entomology 56, 293–312 (2011).
+Scheper, J. et al. Museum specimens reveal loss of pollen host plants as key factor driving wild bee decline in The Netherlands. PNAS 111, 17552–17557 (2014).
+Waser, N. M. & Ollerton, J. Plant-Pollinator Interactions: From Specialization to Generalization. (University of Chicago Press, 2006).
+
